fixed nav and ideabox edge spacing

--- a/frontend/src/styles/IdeaBox.css
+++ b/frontend/src/styles/IdeaBox.css
@@ -3,9 +3,9 @@
   color: #D6D6D6;
   position: relative;
   background-color: rgba(26,26,27,0.8);
-  width: 90%;
   margin: 0;
-  margin-left: 2.5%;
+  margin-left: 25px;
+  margin-right: 25px;
   margin-top: 20px;
   border-radius: 5px;
   border: #686868 1px solid;
@@ -184,6 +184,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .ideaBox {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
   .revisionSelect {
     align-self: flex-end;
     position: absolute;
