--- a/frontend/src/styles/Nav.css
+++ b/frontend/src/styles/Nav.css
@@ -6,8 +6,8 @@
 }
 
 .innerNav {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 50px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
